# yatagfs

./: .gitignore  flake.nix  meson.build
src/: log.c  log.h  main.c  meson.build  ops.c  ops.h  tagfs.c  tagfs.h  utils.c  utils.h
src/sql/: add_tags_to_file.sql  create_file.sql  create_tables.sql  delete_tag.sql  gen.sh  get_file.sql  get_files.sql  get_files_in_tag.sql  get_files_in_tags.sql  get_tag.sql  get_tags.sql  get_tags_not_in.sql  has_file_tags.sql  insert_tag.sql  meson.build  set_recursive_triggers.sql
