srcs += custom_target(
  'gen-c-source-files-form-sql-queries',
  command : ['./gen.sh', '@OUTPUT@', '@INPUT@'],
  input : files(
    'add_tags_to_file.sql',
    'create_file.sql',
    'create_tables.sql',
    'delete_tag.sql',
    'get_file.sql',
    'get_files.sql',
    'get_files_in_tag.sql',
    'get_files_in_tags.sql',
    'get_tag.sql',
    'get_tags.sql',
    'get_tags_not_in.sql',
    'has_file_tags.sql',
    'insert_tag.sql',
    'set_recursive_triggers.sql',
  ),
  output : ['sql_queries.c', 'sql_queries.h'],
)
